--- a/index.html
+++ b/index.html
@@ -21,19 +21,28 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body style="background-color: rgb(140, 190, 190)">
+  <body onload="  setConfigurations();init();">
     <div class="container">
       <div class="row">
         <div class="edit">
-          <button class="btn btn-danger" onclick="run()">Run</button>
+          <div class="header">
+            <button class="btn btn-danger" onclick="run()">Run</button>
+            <img
+              class="logo"
+              src="https://www.skibble.tech/images/logo.png"
+              width="80"
+            />
+          </div>
           <div id="editor" style="height: 400px"></div>
         </div>
+        <div class="editor__preview">
+            <iframe id="editorPreview" frameborder="0"></iframe>
+          </div>
         <div class="preview">
-          <h3>
-            Console
-          </h3>
+          <h4>Output (Console)</h4>
           <div id="preview"></div>
         </div>
+       
       </div>
     </div>
 
