--- a/index.html
+++ b/index.html
@@ -11,24 +11,23 @@
       data-name="vs/editor/editor.main"
       href="https://cdn.jsdelivr.net/npm/monaco-editor/min/vs/editor/editor.main.css"
     />
-    <link rel="stylesheet" href="https://www.skibble.tech/styles/style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+ 
     <link rel="stylesheet" href="style.css" />
-   
   </head>
 
   <body onload="  setConfigurations();init();">
     <div class="load_container">
       <div class="header">
         <button class="btn btn-danger" onclick="run()">Run</button>
+        <button
+          class="btn btn-danger"
+          onclick="saveTextAsFile()"
+        >
+          Download
+        </button>
         <img
           class="logo"
-          src="https://www.skibble.tech/images/logo.png"
+          src="./assets/logo.png"
           width="80"
         />
       </div>
@@ -51,7 +50,7 @@
     </div>
     <div class="ins__preview">
       <b>Instructions:</b>
-     <div class="ins" id="ins"></div>
+      <div class="ins" id="ins"></div>
     </div>
 
     <script>
